--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "nuxt": "^3.16.1",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.0.16",
+    "toastify": "^2.0.1",
     "typescript": "^5.8.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
+    "vue3-flip-countdown": "^0.1.6",
     "vuetify": "^3.7.19"
   }
 }
