--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@tailwindcss/vite": "^4.0.16",
     "@unhead/vue": "^2.0.0",
     "eslint": "^9.23.0",
+    "leaflet": "^1.9.4",
     "nuxt": "^3.16.1",
+    "nuxt-maplibre": "^1.1.1",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.0.16",
     "toastify": "^2.0.1",
